fixes landing page gap between logo and spacer and gap between spacer and nav bar at the bottom

--- a/about.css
+++ b/about.css
@@ -159,10 +159,6 @@ body{
 }
 
 @media (min-width: 500px) {
-	.navBar{
-		height: auto;
-	}
-
 	.navBar a{
 		padding: 1rem;
 	}
