--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 7.5vh;
+	height: auto;
 }
 
 .icon{
@@ -129,7 +129,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 16vh;
+	height: auto;
 }
 
 .navBar ul{
@@ -158,10 +158,6 @@ body{
 }
 
 @media (min-width: 500px) {
-	.navBar{
-		height: 5vh;
-	}
-
 	.navBar a{
 		padding: 1rem;
 	}
